Resource pool is now operating and loading everything as necessary.

--- a/tests/workers/resource-pool.html
+++ b/tests/workers/resource-pool.html
@@ -20,6 +20,7 @@
           pool.createSceneObjectFromMesh({
             scene: scene,
             mesh: 'tests/workers/kraddy_intro_ff_logo_3d2.dae',
+            assetBase: 'images/',
             object: 'Plane-V000',
             options: {
               position: [0, 1, 0],
